change the index.html  add target=blank

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/MobiNetPE" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/MobiNetPE" class="btn btn-default btn-lg" target="blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/pages/MobiNet/362904263871400" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/pages/MobiNet/362904263871400" class="btn btn-default btn-lg" target="blank"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>                   
                 </ul>
             </div>
