--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
+    <!-- Custom Theme JavaScript 
     <script src="js/mobinet.js"></script>
-
+    -->
 </body>
 
 </html>
