--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span>
                 </a>
             </div>
 
@@ -129,9 +129,9 @@
         </div>
     </section>
 
-    <!-- Map Section -->
+    <!-- Map Section 
     <div id="map"></div>
-
+-->
     <!-- Footer -->
     <footer>
         <div class="container text-center">
